Permissions bubble is no longer anchored to the fullscreen bubble.

This fixes a bug where if the fullscreen bubble is deleted while the
permissions bubble is open, the permissions bubble will no longer be
anchored anywhere. Simplest fix was to decouple these two bubbles (so
the fullscreen bubble can now display over the top of the permissions
bubble for a few seconds).

BUG=619894

Review-Url: https://codereview.chromium.org/2065983003
Cr-Commit-Position: refs/heads/master@{#402133}

Former-commit-id: 63388490f5cba741db9b49c1e04124c79ed3d1cd